--- a/ESTA QUASE COMPLETO - TERMINANDO/AINDA NAO TA PRONTO/homer dentro do site/index.html
+++ b/ESTA QUASE COMPLETO - TERMINANDO/AINDA NAO TA PRONTO/homer dentro do site/index.html
@@ -312,6 +312,7 @@
                         <a href="#">Pintor</a>
                         <a href="#">Adestrador</a>
                         <a href="#">Encanador</a>
+                        <a href="#">Encanador</a>
                     </div>
                 </div>
             </div>
