algumas alterações no place holder

--- a/ESTA QUASE COMPLETO - TERMINANDO/AINDA NAO TA PRONTO/homer dentro do site/index.html
+++ b/ESTA QUASE COMPLETO - TERMINANDO/AINDA NAO TA PRONTO/homer dentro do site/index.html
@@ -299,9 +299,16 @@
                 <p class="subtitle">Encontre profissionais e contrate serviços para tudo o que precisar</p>
 
                 <form class="search-bar" action="#" onsubmit="return false;">
-                    <input type="search" id="searchInput" placeholder="O que você precisa?" />
-                    <button type="submit" aria-label="Buscar"><i class="bi bi-search"></i></button>
+                    <div class="input-wrap">
+                        <i class="bi bi-filter-square"></i>
+                        <input type="search" id="searchInput" placeholder="O que você precisa?" />
+                    </div>
+                
+                    <button type="submit" aria-label="Buscar">
+                        <i class="bi bi-search"></i>
+                    </button>
                 </form>
+                
 
 
                 <div class="popular">
