--- a/ESTA QUASE COMPLETO - TERMINANDO/dentro-site/index.html
+++ b/ESTA QUASE COMPLETO - TERMINANDO/dentro-site/index.html
@@ -35,21 +35,282 @@
   </head>
   <body>
     <!--------------------------------------------------------- HEADER ------------------------------------>
-    <header class="header">
-      <div class="logo">
-        <img
-          src="../imagens para o site/ChatGPT Image 17 de out. de 2025, 12_37_12.png"
-          alt="logo Veltrix"
-          class="logo-img"
-        />
-      </div>
-      <nav class="nav">
-        <a href="index.html">Início</a>
-        <a href="../serviços/escolha-serviços.html">Serviços</a>
-        <a href="../Escolha de profissao especifica/Escolha-proficionais/index.html">Profissionais</a>
-        <a href="https://wa.me/5527998803770" target="_blank">Contato</a>
-      </nav>
-    </header>
+<!-- NAVBAR -->
+<header>
+  <nav class="navbar">
+      <div class="nav-inner">
+
+          <div class="nav-item">
+              <div class="icon-wrap">
+                  <i class="bi bi-gear"></i>
+              </div>
+              <span>Assistência técnica</span>
+
+              <div class="dropdown-menu">
+                  <div class="col">
+                      <h4>Aparelhos Eletrônicos</h4>
+                      <a href="#">Aparelho de Som</a>
+                      <a href="#">Aquecedor a Gás</a>
+                      <a href="#">Ar Condicionado</a>
+                      <a href="#">Câmera</a>
+                      <a href="#">DVD / Blu-Ray</a>
+                      <a href="#">Home Theater</a>
+                      <a href="#">Televisão</a>
+                      <a href="#">Video Game</a>
+                  </div>
+                  <div class="col">
+                      <h4>Eletrodomésticos</h4>
+                      <a href="#">Adega Climatizada</a>
+                      <a href="#">Fogão e Cooktop</a>
+                      <a href="#">Geladeira e Freezer</a>
+                      <a href="#">Lava Louça</a>
+                      <a href="#">Máquina de Costura</a>
+                      <a href="#">Máquina de Lavar</a>
+                      <a href="#">Microondas</a>
+                      <a href="#">Secadora de Roupas</a>
+                  </div>
+                  <div class="col">
+                      <h4>Informática e Telefonia</h4>
+                      <a href="#">Cabeamento e Redes</a>
+                      <a href="#">Celular</a>
+                      <a href="#">Computador Desktop</a>
+                      <a href="#">Fone de Ouvido</a>
+                      <a href="#">Impressora</a>
+                      <a href="#">Notebook</a>
+                      <a href="#">Tablet</a>
+                      <a href="#">Telefone Fixo</a>
+                  </div>
+              </div>
+          </div>
+
+          <div class="nav-item">
+              <div class="icon-wrap"><i class="bi bi-award"></i></div>
+              <span>Aulas</span>
+              <div class="dropdown-menu">
+                  <div class="col">
+                      <h4>Aulas Particulares</h4>
+                      <a href="#">Matemática</a>
+                      <a href="#">Física</a>
+                      <a href="#">Química</a>
+                      <a href="#">Inglês</a>
+                      <a href="#">Espanhol</a>
+                  </div>
+                  <div class="col">
+                      <h4>Hobbies</h4>
+                      <a href="#">Música</a>
+                      <a href="#">Culinária</a>
+                      <a href="#">Artes</a>
+                      <a href="#">Fotografia</a>
+                  </div>
+                  <div class="col">
+                      <h4>Profissionalizantes</h4>
+                      <a href="#">Programação</a>
+                      <a href="#">Design Gráfico</a>
+                      <a href="#">Marketing Digital</a>
+                      <a href="#">Excel</a>
+                  </div>
+              </div>
+          </div>
+
+          <div class="nav-item">
+              <div class="icon-wrap"><i class="bi bi-car-front"></i></div>
+              <span>Autos</span>
+              <div class="dropdown-menu">
+                  <div class="col">
+                      <h4>Manutenção</h4>
+                      <a href="#">Mecânica</a>
+                      <a href="#">Troca de Óleo</a>
+                      <a href="#">Freios</a>
+                      <a href="#">Suspensão</a>
+                  </div>
+                  <div class="col">
+                      <h4>Serviços</h4>
+                      <a href="#">Polimento</a>
+                      <a href="#">Alinhamento</a>
+                      <a href="#">Bateria</a>
+                      <a href="#">Pneus</a>
+                  </div>
+                  <div class="col">
+                      <h4>Transporte</h4>
+                      <a href="#">Motorista</a>
+                      <a href="#">Guincho</a>
+                      <a href="#">Instalação de Acessórios</a>
+                  </div>
+              </div>
+          </div>
+
+          <div class="nav-item">
+              <div class="icon-wrap"><i class="bi bi-people"></i></div>
+              <span>Consultoria</span>
+              <div class="dropdown-menu">
+                  <div class="col">
+                      <h4>Negócios</h4>
+                      <a href="#">Plano de Negócios</a>
+                      <a href="#">Financeiro</a>
+                      <a href="#">Estratégia</a>
+                  </div>
+                  <div class="col">
+                      <h4>RH e Jurídico</h4>
+                      <a href="#">Recrutamento</a>
+                      <a href="#">Contratos</a>
+                  </div>
+                  <div class="col">
+                      <h4>Tecnologia</h4>
+                      <a href="#">TI Estratégico</a>
+                      <a href="#">Segurança</a>
+                  </div>
+              </div>
+          </div>
+
+          <div class="nav-item">
+              <div class="icon-wrap"><i class="bi bi-code-slash"></i></div>
+              <span>Design e Tecnologia</span>
+              <div class="dropdown-menu">
+                  <div class="col">
+                      <h4>Web & App</h4>
+                      <a href="#">Desenvolvimento Web</a>
+                      <a href="#">Desenvolvimento Mobile</a>
+                      <a href="#">UX/UI</a>
+                  </div>
+                  <div class="col">
+                      <h4>Design</h4>
+                      <a href="#">Design Gráfico</a>
+                      <a href="#">Branding</a>
+                      <a href="#">Ilustração</a>
+                  </div>
+                  <div class="col">
+                      <h4>Suporte</h4>
+                      <a href="#">DevOps</a>
+                      <a href="#">Banco de Dados</a>
+                      <a href="#">Consultoria TI</a>
+                  </div>
+              </div>
+          </div>
+
+          <div class="nav-item">
+              <div class="icon-wrap"><i class="bi bi-cup-straw"></i></div>
+              <span>Eventos</span>
+              <div class="dropdown-menu">
+                  <div class="col">
+                      <h4>Organização</h4>
+                      <a href="#">Cerimonial</a>
+                      <a href="#">Produção</a>
+                      <a href="#">Logística</a>
+                  </div>
+                  <div class="col">
+                      <h4>Serviços</h4>
+                      <a href="#">Buffet</a>
+                      <a href="#">Decoração</a>
+                      <a href="#">DJ e Som</a>
+                  </div>
+                  <div class="col">
+                      <h4>Locações</h4>
+                      <a href="#">Espaços</a>
+                      <a href="#">Iluminação</a>
+                      <a href="#">Mobiliário</a>
+                  </div>
+              </div>
+          </div>
+
+          <div class="nav-item">
+              <div class="icon-wrap"><i class="bi bi-person"></i></div>
+              <span>Moda e beleza</span>
+              <div class="dropdown-menu">
+                  <div class="col">
+                      <h4>Beleza</h4>
+                      <a href="#">Cabeleireiro</a>
+                      <a href="#">Maquiagem</a>
+                      <a href="#">Manicure</a>
+                  </div>
+                  <div class="col">
+                      <h4>Moda</h4>
+                      <a href="#">Personal Stylist</a>
+                      <a href="#">Costureira</a>
+                      <a href="#">Consultoria de Imagem</a>
+                  </div>
+                  <div class="col">
+                      <h4>Estética</h4>
+                      <a href="#">Massagem</a>
+                      <a href="#">Depilação</a>
+                  </div>
+              </div>
+          </div>
+
+          <div class="nav-item">
+              <div class="icon-wrap"><i class="bi bi-hammer"></i></div>
+              <span>Reformas e reparos</span>
+              <div class="dropdown-menu">
+                  <div class="col">
+                      <h4>Construção</h4>
+                      <a href="#">Pedreiro</a>
+                      <a href="#">Encanador</a>
+                      <a href="#">Eletricista</a>
+                  </div>
+                  <div class="col">
+                      <h4>Acabamento</h4>
+                      <a href="#">Pintor</a>
+                      <a href="#">Azulejista</a>
+                      <a href="#">Serralheria</a>
+                  </div>
+                  <div class="col">
+                      <h4>Serviços</h4>
+                      <a href="#">Montagem</a>
+                      <a href="#">Marcenaria</a>
+                  </div>
+              </div>
+          </div>
+
+          <div class="nav-item">
+              <div class="icon-wrap"><i class="bi bi-heart-pulse"></i></div>
+              <span>Saúde</span>
+              <div class="dropdown-menu">
+                  <div class="col">
+                      <h4>Atendimento</h4>
+                      <a href="#">Enfermagem</a>
+                      <a href="#">Fisioterapia</a>
+                      <a href="#">Psicologia</a>
+                  </div>
+                  <div class="col">
+                      <h4>Especialidades</h4>
+                      <a href="#">Nutrição</a>
+                      <a href="#">Dermatologia</a>
+                      <a href="#">Cardiologia</a>
+                  </div>
+                  <div class="col">
+                      <h4>Cuidados</h4>
+                      <a href="#">Home Care</a>
+                      <a href="#">Cuidador</a>
+                  </div>
+              </div>
+          </div>
+
+          <div class="nav-item">
+              <div class="icon-wrap"><i class="bi bi-house"></i></div>
+              <span>Serviços Domésticos</span>
+              <div class="dropdown-menu">
+                  <div class="col">
+                      <h4>Limpeza</h4>
+                      <a href="#">Diária</a>
+                      <a href="#">Faxina</a>
+                      <a href="#">Passadeira</a>
+                  </div>
+                  <div class="col">
+                      <h4>Casa</h4>
+                      <a href="#">Babá</a>
+                      <a href="#">Jardineiro</a>
+                      <a href="#">Dedetização</a>
+                  </div>
+                  <div class="col">
+                      <h4>Outros</h4>
+                      <a href="#">Montagem</a>
+                      <a href="#">Mudanças</a>
+                  </div>
+              </div>
+          </div>
+
+      </div> <!-- nav-inner -->
+  </nav>
+</header>
 
     <!--------------------------------------------- HERO ----------------------------------->
     <section class="hero">
@@ -410,5 +671,6 @@
     <script src="script.js"></script>
     <script src="seção.js"></script>
     <script src="pop-up.js"></script>
+    <script src="place-holder.js"></script>
   </body>
 </html>
